--- a/server/views/layout.hbs
+++ b/server/views/layout.hbs
@@ -84,12 +84,9 @@
     <main role="main" class="container">
       {{#each error}}
       <div class="alert alert-danger" role="alert">
-        <p class="mb-3">{{ this.message }}</p>
-        {{#if this.debug }}
         <pre
           class="alert-pre border bg-light p-2"
-        ><code>{{ this.debug }}</code></pre>
-        {{/if}}
+        ><code>{{ this }}</code></pre>
       </div>
       {{/each}}
 
